# CodeGraphX

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURE_REPORT.md  HANDOFF.md  LOOP_REPORT.md  MISSINGMORE  README.md  README_20260220_142827.md.bak  VERIFY.md  __init__.py  analyse_results.ps1  audit_summary.json  baseline_post.json  check_project.ps1  conftest.py  dry_run_relocation_report.txt  justfile  parse_txt_to_csv.py  purge_orphans.py  pyproject.toml  recommendations.json  relocate_orphans.py  requirements.txt  requirements.txt.old  setup.py  smoke_no_db_report.json  start-neo4j.ps1  test_csv_parser.py  test_relocate_orphans.py
.dodkit/: allowlist.json  template.json
.github/workflows/: ci.yml
.pytest_tmp/: test_analyze_scan_extracts_calcurrent  test_analyze_scan_js_uses_funccurrent  test_doctor_skip_neo4jcurrent  test_persist_results_writes_tacurrent
.pytest_tmp/test_analyze_scan_extracts_cal0/: scan.jsonl
.pytest_tmp/test_analyze_scan_js_uses_func0/: scan.jsonl
.pytest_tmp/test_doctor_skip_neo4j0/: settings.yaml
archive/docs_old_20260212_210911/: commands.md  completion_plan.md  design.md  queries.md  roadmap.md  schema.md  security-architecture.md
cg_platform/: README.md  README_20260220_142827.md.bak  __init__.py  config.py  contracts.py  runtime.py  services.py
cg_platform/api/: README.md  README_20260220_142827.md.bak  app.py  routes.py  schemas.py
cg_platform/jobs/: README.md  README_20260220_142827.md.bak  __init__.py  queue.py  worker.py
cg_platform/policy/: README.md  README_20260220_142827.md.bak  __init__.py  gates.py
cg_platform/storage/: README.md  README_20260220_142827.md.bak  __init__.py  memory.py  repositories.py
cli/: README.md  README_20260220_142827.md.bak  main.py
codegraphx/: README.md
config/: default.codebase_x.yaml  default.eye_witness.yaml  default.yaml  projects.example.yaml  projects.eye_witness.yaml  projects.local.yaml  projects.yaml
config/pytoolbelt_chunks/: projects_chunk_01.yaml  projects_chunk_02.yaml  projects_chunk_03.yaml  projects_chunk_04.yaml  projects_chunk_05.yaml  projects_chunk_06.yaml  settings_chunk_01.yaml  settings_chunk_02.yaml  settings_chunk_03.yaml  settings_chunk_04.yaml  settings_chunk_05.yaml  settings_chunk_06.yaml
config/pytoolbelt_preview_chunks/: projects_chunk_01.yaml  projects_chunk_02.yaml  settings_chunk_01.yaml  settings_chunk_02.yaml
config/repo_enrichment_batch_large_20260301/: projects_bluewhale.yaml  projects_codegraphx.yaml  projects_windowstoolbelt.yaml  settings_bluewhale.yaml  settings_codegraphx.yaml  settings_windowstoolbelt.yaml
config/repo_enrichment_batch_small_20260301/: projects_binaryguard.yaml  projects_dreamextractor.yaml  projects_eye-witness.yaml  projects_pipeline_suite.yaml  projects_projectcatalog.yaml  projects_systemauditor.yaml  projects_unified_url_toolkit.yaml  settings_ai-inline-learning.yaml  settings_binaryguard.yaml  settings_dreamextractor.yaml  settings_eye-witness.yaml  settings_mrjr0101.yaml  settings_mrjr0101_github_io.yaml  settings_pipeline_suite.yaml  settings_projectcatalog.yaml  settings_systemauditor.yaml  settings_unified_url_toolkit.yaml  settings_urlkit.yaml
config/repo_enrichment_refresh_20260301/: projects_ai-inline-learning.yaml  projects_mrjr0101.yaml  projects_mrjr0101_github_io.yaml  projects_urlkit.yaml  settings_ai-inline-learning.yaml  settings_bluewhale.yaml  settings_mrjr0101.yaml  settings_mrjr0101_github_io.yaml  settings_pipeline_suite.yaml  settings_urlkit.yaml
config/scanner_enrichment/: projects_contentsearch_scanner.yaml  projects_filetreedb_scanner.yaml  projects_projectcatalog_scanner.yaml  settings_filetreedb_scanner.yaml  (+10 more)
core/: README.md  README_20260220_142827.md.bak  config.py  hardening.py  models.py  pipeline.py
data/: ast.jsonl  events.jsonl  extract.cache.json  extract.meta.json  full_report.json  load.meta.json  load.state.json  parse.cache.json  parse.meta.json  pytoolbelt_collectors.json  pytoolbelt_collectors_curated.json  pytoolbelt_collectors_curated.txt  scan.jsonl  snapshot_report.json
docs/: AUDIT_20260410.md  README.md  README_20260220_142827.md.bak  commands.md  completion_plan.md  design.md  queries.md  roadmap.md  schema.md  security-architecture.md
examples/: demo_projects.yaml
extractors/: README.md  README_20260220_142827.md.bak  architecture_extractor.py
graph/: README.md  README_20260220_142827.md.bak  cpg_builder.py  writer.py
llm/: README.md  README_20260220_142827.md.bak  query_interface.py
metrics/: README.md  README_20260220_142827.md.bak  metrics_engine.py
parsers/: README.md  README_20260220_142827.md.bak  tree_sitter_parser.py
schema/: README.md  README_20260220_142827.md.bak  neo4j_schema.py
scripts/: README.md  bootstrap_neo4j.cypher  bootstrap_neo4j_docker.ps1  chunked_scan_enrich.py  code_intelligence_signals.py  enrich_repo_projects.py  enrichment_backlog.py  enrichment_campaign.py  file_collector_signals.py  install_grammars.py  pre-commit.backup_20260210_150925.py  pre-commit.py  release_check.ps1  smoke_no_db.ps1  sqlite_index_audit.py
semantic/: README.md  README_20260220_142827.md.bak  semantic_layer.py
tests/: README.md  README_20260220_142827.md.bak  test_all.py  test_models.py  test_platform_scaffold.py
(+242 files in other folders)
