[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegraphx"
version = "0.2.0"
description = "Tree-sitter to code knowledge graph pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "MR"}]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "neo4j>=5.22",
    "httpx>=0.27",
    "tree-sitter>=0.22.3",
    "tree-sitter-language-pack>=0.7.2",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "mypy>=1.10",
    "build>=1.2",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.3",
]


[project.scripts]
codegraphx = "codegraphx.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["scripts/pre-commit.backup_*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
exclude = "^scripts/pre-commit\\.backup_.*\\.py$"

[tool.uv]
package = true
