[project]



name = "codegraphx"



version = "0.2.0"



description = "codegraphx project"



readme = "README.md"



requires-python = ">=3.10"



dependencies = [
    "click",
    "fastapi",
    "neo4j",
    "numpy",
    "pydantic",
    "pytest",
    "sentence_transformers",
    "setuptools",
    "tree_sitter",
    "tree_sitter_javascript",
    "tree_sitter_python",
    "uvicorn",
]







[dependency-groups]



dev = [



  "pytest>=8.0",



  "pytest-cov>=6.0",



  "ruff>=0.8",



  "mypy>=1.13",



  "pip-audit>=2.7",



  "pre-commit>=4.0",



]







[build-system]



requires = ["hatchling"]



build-backend = "hatchling.build"







[tool.ruff]



line-length = 120



target-version = "py311"
src = ["src", "tests"]
extend-exclude = [
  "cg_platform",
  "cli",
  "codegraphx",
  "core",
  "data",
  "dist",
  "extractors",
  "graph",
  "llm",
  "metrics",
  "parsers",
  "schema",
  "scripts",
  "semantic",
  "tests/test_all.py",
  "tests/test_models.py",
  "tests/test_platform_scaffold.py",
  ".venv",
  "venv",
]







[tool.ruff.lint]



select = ["E", "F", "W", "I", "UP", "S", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]







[tool.mypy]



python_version = "3.11"



strict = true
files = ["src", "tests/unit", "tests/integration"]
mypy_path = ["src"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tree_sitter_language_pack"
ignore_missing_imports = true







[tool.pytest.ini_options]



testpaths = ["tests/unit", "tests/integration"]



addopts = "--cov=. --cov-report=term-missing --basetemp=.pytest_tmp"







[tool.coverage.run]



source = ["."]



branch = true







[tool.coverage.report]



show_missing = true



exclude_lines = [



  "pragma: no cover",



  "if TYPE_CHECKING:",



  "if __name__ == .__main__.:",



]







[project.scripts]



codegraphx = "codegraphx.__main__:main"
