[project]
name = "codegraphx"
version = "0.2.0"
description = "Deterministic local-first code intelligence CLI for code graph extraction and analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "neo4j>=6.1.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
  "rich>=13.0.0",
  "typer>=0.12,<1.0",
]

[project.scripts]
codegraphx = "codegraphx.__main__:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.13",
  "pip-audit>=2.7",
  "pre-commit>=4.0",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "ruff>=0.8",
]

[dependency-groups]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "mypy>=1.13",
  "pip-audit>=2.7",
  "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codegraphx"]

[tool.hatch.build.targets.sdist]
include = [
  "src/codegraphx",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  "config",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [
  "cg_platform",
  "cli",
  "codegraphx",
  "core",
  "data",
  "dist",
  "extractors",
  "graph",
  "llm",
  "metrics",
  "parsers",
  "schema",
  "scripts",
  "semantic",
  "tests/test_all.py",
  "tests/test_models.py",
  "tests/test_platform_scaffold.py",
  ".venv",
  "venv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
mypy_path = ["src"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tree_sitter_language_pack", "tree_sitter_language_pack.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tree_sitter", "tree_sitter.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
addopts = "--basetemp=.pytest_tmp --import-mode=importlib"

[tool.coverage.run]
source = ["."]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
